# geometry_common

./: .gitlab-ci.yml  CMakeLists.txt  Dockerfile  README.md  package.xml
.github/workflows/: docker-image.yml  docker-image.yml123  doxygen-gh-pages.yml
docs/: contribution_guideline.md
docs/doxygen/: Doxyfile.in
include/geometry_common/: Attitude2D.h  Box.h  Box2D.h  Box3D.h  Circle.h  Enums.h  LineSegment.h  LineSegment2D.h  Point.h  Point2D.h  Point2d.h  Point3D.h  Point3d.h  PointCloudProjector.h  Polygon2D.h  Polygon2d.h  Polyline2D.h  Pose2D.h  Pose2d.h  TransformMat2D.h  TransformMat3D.h  TransformMatrix2D.h  TransformMatrix3D.h  Utils.h  XYTheta.h  box.h  line_segment.h  point.h  pointcloud_projector.h  pose_2d.h  utils.h
src/: Attitude2D.cpp  Box.cpp  Box2D.cpp  Box3D.cpp  Circle.cpp  LineSegment.cpp  LineSegment2D.cpp  Point.cpp  Point2D.cpp  Point2d.cpp  Point3D.cpp  Point3d.cpp  PointCloudProjector.cpp  Polygon2D.cpp  Polygon2d.cpp  Polyline2D.cpp  Pose2D.cpp  Pose2d.cpp  TransformMat2D.cpp  TransformMat3D.cpp  TransformMatrix2D.cpp  TransformMatrix3D.cpp  Utils.cpp  XYTheta.cpp  box.cpp  line_segment.cpp  point.cpp  pointcloud_projector.cpp  pose_2d.cpp  utils.cpp
test/: CMakeLists.txt  circle_test.cpp  line_segment_2d_test.cpp  point3d_test.cpp  point_3d_test.cpp  point_test.cpp  polygon_2d_test.cpp  pose2d_test.cpp  pose_2d_test.cpp  run_all_tests  transform_3d_test.cpp  utils_test.cpp
