<?xml version="1.0"?>
<package format="2">
    <name>geometry_common</name>
    <version>0.1.0</version>
    <description>Common data structures, utilities and modules for geometric tasks</description>

    <author email="dharmin.bakaraniya@kelo-robotics.com">Dharmin B.</author>
    <author email="sushant.chavan@kelo-robotics.com">Sushant Chavan</author>

    <maintainer email="dharmin.bakaraniya@kelo-robotics.com">Dharmin B.</maintainer>

    <license>LGPL/BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>tf</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>visualization_msgs</build_depend>
    <build_depend>tf2_geometry_msgs</build_depend>

    <exec_depend>tf</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>nav_msgs</exec_depend>
    <exec_depend>visualization_msgs</exec_depend>
    <exec_depend>tf2_geometry_msgs</exec_depend>

    <export>
    </export>

</package>
