<?xml version="1.0"?>
<package format="2">
    <name>geometry_common</name>
    <version>0.1.0</version>
    <description>Common data structures, utilities and modules for geometric tasks</description>

    <author email="dharmin.bakaraniya@kelo-robotics.com">Dharmin B.</author>
    <author email="sushant.chavan@kelo-robotics.com">Sushant Chavan</author>

    <maintainer email="dharmin.bakaraniya@kelo-robotics.com">Dharmin B.</maintainer>

    <license>LGPL/BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>tf</depend>
    <depend>sensor_msgs</depend>
    <depend>std_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>visualization_msgs</depend>
    <depend>tf2_geometry_msgs</depend>

</package>
